--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 
 <!-- MANDATORY STYLES -->
 <link href = "{% static "theme.css" %}" rel="stylesheet" type="text/css" />
+<script src="{% static "/js/bootstrap.min.js" %}" type = "text/javascript"></script>
 </head>
 <body>
 <div class="navbar navbar-default">
