--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,8 @@
 
 <!-- MANDATORY STYLES -->
 <link href = "{% static "theme.css" %}" rel="stylesheet" type="text/css" />
-<script src="{% static "/js/bootstrap.min.js" %}" type = "text/javascript"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="{% static "js/bootstrap.min.js" %}" type = "text/javascript"></script>
 </head>
 <body>
 <div class="navbar navbar-default">
@@ -30,8 +31,12 @@
 </div>
 <div class="container">
     <div class="col-lg-12">
+        
         {% block content %}{% endblock %}
     </div>
 </div>
 </body>
 </html>
+<script>
+    $(".navbar-responsive-collapse").collapse();
+</script>
