crispy form renders!

--- a/templates/newgame.html
+++ b/templates/newgame.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<h1> hello world</h1>
+<h1>Add Your Friends to Play!</h1>
+{% crispy form %}
+
+
+
 {% endblock %}
