--- a/templates/newgame.html
+++ b/templates/newgame.html
@@ -2,25 +2,6 @@
 {% load crispy_forms_tags %}
 {% block content %}"
 <h1>Add Your Friends to Play!</h1>
-{% crispy form %}
+<a href= "{% url 'addplayers' %}">Start Adding Players</a>
 
-<h1>Current Players</h1>
-
-{% if scorecards %}
-{% for p in scorecards %}
-
-<div class='row'>
-    <div class='col-lg-4'?>
-        <h3>{{p.player_name}}</h3>
-    </div>
-</div>
-{% endfor %}
-{% endif %}
-{% if not scorecards %}
-<div class='row'>
-    <div class='col-lg-4'?>
-        <p>You haven't added anyone yet...</p>
-    </div>
-</div>
-{% endif %}
 {% endblock %}
