--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
+{% load render_table from django_tables2 %}
 {% block content %}"
 <h1>Score Board</h1>
 
+{% render_table table %}
 
 {% endblock %}
