--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 
 <!-- MANDATORY STYLES -->
 <link href = "{% static "theme.css" %}" rel="stylesheet" type="text/css" />
+<link href = "{% static "font-awesome-4.2.0/css/font-awesome.min.css" %}" rel="stylesheet" type="text/css" />
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="{% static "js/bootstrap.min.js" %}" type = "text/javascript"></script>
 </head>
