--- a/templates/gamestats.html
+++ b/templates/gamestats.html
@@ -4,6 +4,30 @@
 {% block content %}
 
 <h1>Thanks for Playing!</h1>
-<h2>Here are the results</h2>
-
+<h2>Results</h2>
+<div class = "row">
+    <table class="table table-bordered table-striped table-hover">
+        <div class = "col-lg-12">
+    <thead>
+        <tr>
+            <th>Rank</th>
+            <th>Player</th>
+            <th>Total Score</th>        
+        </tr>
+    </thead>
+    <tbody>
+    {% for card in scorecards %}
+        <tr>
+            <td>{{card.rank}}</td>
+            <td>{{card.player_name}}</td>
+            <td>{{card.total_score}}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+        </div>
+    </table>    
+     <div class='col-lg-6 pull-left' style="padding-top: 3%">
+        <a href = "{% url 'addplayers' %}" class="btn-lg btn-success" role="button">New Game</a>
+     </div>
+</div>
 {% endblock %}
