modified urls and views for root url

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{% url 'home' %}">Zebra Bowl</a>
+        <a class="navbar-brand" href="{% url 'roothome' %}">Zebra Bowl</a>
     </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
