--- a/templates/gamestats.html
+++ b/templates/gamestats.html
@@ -27,7 +27,7 @@
         </div>
     </table>    
      <div class='col-lg-6 pull-left' style="padding-top: 3%">
-        <a href = "{% url 'addplayers' %}" class="btn-lg btn-success" role="button">New Game</a>
+        <a href = "{% url 'newgame' %}" class="btn-lg btn-success" role="button">New Game</a>
      </div>
 </div>
 {% endblock %}
