--- a/templates/addplayers.html
+++ b/templates/addplayers.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
-{% block content %}"
+{% block content %}
 <div class='row'>
     <div class='col-lg-6 pull-left'>
         <h1>Add Your Friends to Play!</h1>
