--- a/templates/newgame.html
+++ b/templates/newgame.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
-{% block content %}"
+{% block content %}
 <h1>Add Your Friends to Play!</h1>
         <div class='col-lg-6 pull-left' style="padding-top: 3%">
             <a href = "{% url 'addplayers' %}" class="btn-lg btn-primary" role="button">Start Adding Players</a>
