--- a/templates/addplayers.html
+++ b/templates/addplayers.html
@@ -9,7 +9,7 @@
     {% if scorecards %}
 
         <div class='col-lg-6 pull-right' style="padding-top: 3%">
-            <a href = "{% url 'gameboard' %}" class="btn-lg btn-success" role="button">Start Bowling!!!</a>
+            <a href = "{% url 'gameboard' username=PROFILE.user.username %}" class="btn-lg btn-success" role="button">Start Bowling!!!</a>
         </div>
 
     {% endif %}
